--- a/scss/components/_invite-page.scss
+++ b/scss/components/_invite-page.scss
@@ -104,8 +104,7 @@
 
   // .invite-calc__info
 
-  &__info {
-  }
+  &__info {}
 
   // .invite-calc__result
 
@@ -113,7 +112,7 @@
     max-width: 380px;
     width: 30%;
 
-    > span {
+    >span {
       font-size: 14px;
       color: $black;
       display: block;
@@ -159,6 +158,7 @@
     align-items: stretch;
     margin: 0 -20px -10px;
     box-sizing: border-box;
+
     .item {
       width: calc(33.33% - 20px);
       margin: 0 10px 10px;
@@ -169,6 +169,7 @@
       padding: 30px;
       display: flex;
       align-items: flex-start;
+
       .num {
         font-size: 66px;
         padding: 0 14px;
@@ -180,6 +181,7 @@
         border-radius: 10px;
         box-sizing: border-box;
       }
+
       .text {
         h3 {
           margin: 0;
@@ -190,6 +192,7 @@
           color: $black;
           margin-bottom: 20px;
         }
+
         p {
           margin: 0;
           color: $black;
@@ -198,6 +201,7 @@
           display: block;
           margin-bottom: 20px;
         }
+
         a {
           display: block;
           width: fit-content;
@@ -215,7 +219,12 @@
 }
 
 .invite-power {
+
   // .invite-power__items
+  .invite-swiper {
+    display: flex;
+    justify-content: center;
+  }
 
   &__items {
     display: flex;
@@ -223,6 +232,7 @@
     align-items: stretch;
     box-sizing: border-box;
     margin: 0 -10px;
+
     .item {
       width: calc(100% / 3 - 20px);
       margin: 0 10px 20px;
@@ -233,6 +243,8 @@
       background-color: #fff;
       border: 1px solid #d6d2d2;
       border-radius: 8px;
+      height: auto;
+
       .img {
         box-sizing: border-box;
         padding: 8px;
@@ -240,6 +252,7 @@
         background-color: $gray;
         border-radius: 8px;
         margin-right: 30px;
+
         img {
           display: block;
           width: 64px;
@@ -247,6 +260,7 @@
           object-fit: contain;
         }
       }
+
       .text {
         h3 {
           margin: 0;
@@ -257,6 +271,7 @@
           color: $black;
           margin-bottom: 10px;
         }
+
         p {
           font-size: 12px;
           font-weight: 400;
@@ -269,6 +284,7 @@
     }
   }
 }
+
 .invite-honest {
   // .invite-honest__title
   padding: 50px 0;
@@ -284,6 +300,7 @@
     display: flex;
     margin: 0 -10px;
     align-items: stretch;
+
     .item {
       padding: 50px 14px 20px;
       box-sizing: border-box;
@@ -292,6 +309,7 @@
       border-radius: 8px;
       width: calc(100% / 4 - 20px);
       margin: 0 10px;
+
       .title {
         padding: 15px;
         background-color: $gray;
@@ -299,10 +317,12 @@
         align-items: center;
         position: relative;
         margin-bottom: 20px;
+
         h2 {
           margin: 0;
           display: block;
         }
+
         svg {
           display: block;
           margin-right: 10px;
@@ -310,6 +330,7 @@
           height: 20px;
         }
       }
+
       .subtitle {
         position: absolute;
         padding: 5px 10px;
@@ -323,6 +344,7 @@
         left: 0;
         border-radius: 8px 8px 0 0;
       }
+
       .text {
         a {
           display: block;
@@ -332,6 +354,7 @@
           border-bottom: 1px dotted $gray2;
           padding-bottom: 3px;
         }
+
         p {
           font-weight: 400;
           line-height: 1.4;
@@ -339,15 +362,18 @@
           display: block;
           margin-bottom: 20px;
         }
+
         ul {
           padding: 0;
           margin: 0;
           box-sizing: border-box;
           list-style: none;
           margin-bottom: 20px;
+
           li {
             padding-left: 15px;
             position: relative;
+
             &::before {
               content: "";
               position: absolute;
@@ -357,6 +383,7 @@
               height: 3px;
               background-color: $black;
             }
+
             font-size: 16px;
             display: block;
             color: $black;
@@ -375,12 +402,14 @@
     align-items: center;
     box-sizing: border-box;
     justify-content: center;
+
     .text {
       width: 100%;
       box-sizing: border-box;
       max-width: 555px;
       margin-right: 40px;
     }
+
     .action {
       a {
         font-size: 16px;
@@ -401,6 +430,7 @@
   // .faq__title
   padding-top: 100px;
   padding-bottom: 50px;
+
   .container {
     width: calc(100% - 30px);
     max-width: 1264px;
@@ -415,13 +445,12 @@
     font-weight: 600;
     margin-bottom: 30px;
   }
-  &__title {
-  }
+
+  &__title {}
 
   // .faq__items
 
-  &__items {
-  }
+  &__items {}
 
   // .faq__item
 
@@ -429,15 +458,19 @@
     padding-bottom: 20px;
     border-bottom: 1px solid $gray2;
     margin-bottom: 20px;
+
     &.active {
       border-color: $accent;
+
       button {
         color: $black;
+
         &::after {
           transform: rotate(45deg);
           opacity: 0;
         }
       }
+
       .faq__text {
         max-height: max-content;
         opacity: 1;
@@ -445,6 +478,7 @@
         padding-top: 20px;
       }
     }
+
     button {
       width: 100%;
       box-sizing: border-box;
@@ -455,6 +489,7 @@
       cursor: pointer;
       text-align: left;
       position: relative;
+
       &::before {
         content: "";
         position: absolute;
@@ -464,6 +499,7 @@
         height: 1px;
         background-color: $gray2;
       }
+
       &::after {
         transition: 0.35s ease;
         content: "";
@@ -485,11 +521,13 @@
     opacity: 0;
     transition: 0.35s ease;
     visibility: hidden;
+
     &.active {
       padding: 20px 0;
       max-height: max-content;
       visibility: visible;
     }
+
     p {
       margin: 0;
       display: block;
@@ -498,12 +536,15 @@
 
   // .faq__subtitle
 
-  &__subtitle {
-  }
+  &__subtitle {}
 }
 
 .invite {
+
   // .invite__bottom
+  &__title {
+    margin-bottom: 40px;
+  }
 
   &__bottom {
     background-color: #fff;
@@ -512,8 +553,9 @@
     padding-bottom: 90px;
   }
 }
-.container {
-}
+
+.container {}
+
 .invite-bottom {
   // .invite-bottom__wrap
 
@@ -529,25 +571,28 @@
     width: 100%;
     box-sizing: border-box;
     margin-right: auto;
+
     h2 {
-        color: $black;
-        font-weight: 600;
-        font-size: 22px;
-        display: block;
-        line-height: 1.4;
-        margin-bottom: 20px;
+      color: $black;
+      font-weight: 600;
+      font-size: 22px;
+      display: block;
+      line-height: 1.4;
+      margin-bottom: 20px;
     }
+
     p {
-        display: block;
-        font-size: 16px;
-        line-height: 1.4;
-        box-sizing: border-box;
-        color: $black;
+      display: block;
+      font-size: 16px;
+      line-height: 1.4;
+      box-sizing: border-box;
+      color: $black;
     }
+
     a {
-        display: block;
-        width: fit-content;
-        padding: 12px 50px;
+      display: block;
+      width: fit-content;
+      padding: 12px 50px;
     }
   }
 
@@ -555,13 +600,192 @@
 
   &__img {
     max-width: 500px;
+
     img {
-        display: block;
-        width: 100%;
-        box-sizing: border-box;
-        object-fit: contain;
+      display: block;
+      width: 100%;
+      box-sizing: border-box;
+      object-fit: contain;
     }
   }
 }
-.main-btn {
+
+.main-btn {}
+
+
+@media(max-width:920px) {
+  .invite-calc {
+    &__row {
+      flex-direction: column;
+    }
+
+    &__result {
+      width: 100%;
+      box-sizing: border-box;
+      max-width: none;
+    }
+
+    &__total {
+      margin-bottom: 15px;
+    }
+
+  }
+
+  .invite-launch {
+    &__items {
+      flex-direction: column;
+      margin: 0;
+
+      .item {
+        max-width: none;
+        width: 100%;
+        margin: 0 0 20px;
+        box-sizing: border-box;
+      }
+    }
+
+    &__item {}
+  }
+
+
+}
+
+@media(max-width:768px) {
+  .invite-calc {
+    &__calc {
+      flex-direction: column;
+
+      label {
+        width: 100%;
+        box-sizing: border-box;
+        max-width: none;
+      }
+
+      .action {
+        button {
+          width: 100%;
+          max-width: none;
+        }
+      }
+    }
+  }
+}
+
+@media(max-width:920px) {
+  .invite-power {
+    &__items {
+      .item {
+        width: calc(50% - 20px);
+
+        &:last-child {
+          margin: 0 10px;
+          width: calc(100% - 20px);
+        }
+      }
+    }
+  }
+}
+
+@media(max-width:620px) {}
+
+@media(max-width:768px) {
+  .invite-power {
+    &__items {
+      .item {
+        padding: 15px;
+
+        .img {
+          margin-right: 13px;
+
+          img {
+            width: 48px;
+            height: 48px;
+          }
+        }
+      }
+    }
+  }
+}
+
+@media(max-width:640px) {
+  .invite-power {
+    &__items {
+      flex-wrap: nowrap;
+      overflow: auto;
+
+      .item {
+        box-sizing: border-box;
+        min-width: 295px;
+      }
+    }
+  }
+}
+
+@media(max-width:1200px) {
+  .invite-honest {
+    &__items {
+      flex-wrap: wrap;
+      margin: 0 -10px;
+
+      .item {
+        margin: 0 10px 20px;
+        width: calc(50% - 20px);
+      }
+    }
+  }
+}
+
+@media(max-width:620px) {
+  .invite-honest {
+    &__items {
+      margin: 0;
+
+      .item {
+        width: calc(100%);
+        margin: 0 0 20px;
+      }
+    }
+  }
+}
+
+@media(max-width:768px) {
+  .breaker {
+    &__wrap {
+      padding: 20px;
+      flex-direction: column;
+
+      .text {
+        margin: 0 0 20px;
+      }
+
+      .action {
+        width: 100%;
+
+        button {
+          width: 100%;
+          max-width: none;
+        }
+      }
+    }
+  }
+}
+
+@media(max-width:768px) {
+  .invite {
+    &__bottom {
+      padding: 50px 0;
+
+    }
+
+  }
+  .invite-bottom {
+    &__wrap {
+      flex-direction: column;
+
+    }
+    &__text {
+      margin-right: 0;
+      margin-bottom: 40px;
+    }
+  }
 }
