--- a/scss/components/_footer.scss
+++ b/scss/components/_footer.scss
@@ -1,91 +1,125 @@
 .footer {
-    background-color: $black;
-    padding: 50px 0;
-    box-sizing: border-box;
-    // .footer__top
+  background-color: $black;
+  padding: 50px 0;
+  box-sizing: border-box;
+  // .footer__top
 
-    &__top {
-        display: flex;
-        justify-content: space-between;
-        margin-bottom: 50px;
+  &__top {
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 50px;
 
-        .col {
-            ul {
-                margin: 0;
-                list-style: none;
-                box-sizing: border-box;
-                padding: 0;
-
-                li {
-                    margin-bottom: 20px;
-
-                    &:last-child {
-                        margin-bottom: 0;
-                    }
-
-                    a {
-                        color: $gray2;
-                        display: block;
-                        text-decoration: none;
-                        font-size: 16px;
-                        transition: .35s ease;
-                        &:hover {
-                            color: $accent;
-                        }
-                    }
-                }
-            }
-        }
-    }
-
-    // .footer__title
-
-    &__title {
+    .col {
+      ul {
         margin: 0;
-        display: block;
-        color: #fff;
-        font-size: 16px;
-        font-weight: 600;
-        line-height: 1.4;
-        display: block;
-        margin-bottom: 20px;
-    }
+        list-style: none;
+        box-sizing: border-box;
+        padding: 0;
 
-    // .footer__bottom
+        li {
+          margin-bottom: 20px;
 
-    &__bottom {
-        .row:first-child {
-            margin-bottom: 50px;
+          &:last-child {
+            margin-bottom: 0;
+          }
 
-            .footer__title {
-                margin-bottom: 0;
+          a {
+            color: $gray2;
+            display: block;
+            text-decoration: none;
+            font-size: 16px;
+            transition: 0.35s ease;
+            &:hover {
+              color: $accent;
             }
-
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
+          }
         }
-        .row:last-child {
-            span {
-                color: $gray2;
-                margin-bottom: 50px;
-                display: block;
-            }
-            p {
-                margin: 0;
-                color: $gray2;
-            }
-        }
-
+      }
     }
+  }
 
-    // .footer__socials
+  // .footer__title
 
-    &__socials {}
+  &__title {
+    margin: 0;
+    display: block;
+    color: #fff;
+    font-size: 16px;
+    font-weight: 600;
+    line-height: 1.4;
+    display: block;
+    margin-bottom: 20px;
+  }
+
+  // .footer__bottom
+
+  &__bottom {
+    .row:first-child {
+      margin-bottom: 50px;
+
+      .footer__title {
+        margin-bottom: 0;
+      }
+
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+    }
+    .row:last-child {
+      span {
+        color: $gray2;
+        margin-bottom: 50px;
+        display: block;
+      }
+      p {
+        margin: 0;
+        color: $gray2;
+      }
+    }
+  }
+
+  // .footer__socials
+
+  &__socials {
+  }
 }
 
-.container {}
-
-.col {}
-
-.row {}
+@media (max-width: 768px) {
+  .footer {
+    &__top {
+      flex-direction: column;
+      .col {
+        width: 100%;
+        box-sizing: border-box;
+        position: relative;
+        &::before {
+          content: "";
+          position: absolute;
+          right: 15px;
+          top: 3px;
+          width: 10px;
+          height: 10px;
+          border-left: 2px solid $gray2;
+          border-bottom: 2px solid $gray2;
+          transform: rotate(-45deg);
+          pointer-events: none;
+        }
+        ul {
+          max-height: 0;
+          overflow: hidden;
+          box-sizing: border-box;
+          opacity: 0;
+          transition: .35s ease;
+          &.active {
+            box-sizing: border-box;
+            max-height: max-content;
+            opacity: 1;
+            margin-bottom: 20px;
+          }
+        }
+      }
+    }
+    &__title {
+    }
+  }
+}
