--- a/scss/components/_invite-page.scss
+++ b/scss/components/_invite-page.scss
@@ -483,6 +483,7 @@
       width: 100%;
       box-sizing: border-box;
       padding: 5px 0;
+      padding-right: 20px;
       background-color: transparent;
       border: none;
       color: $gray2;
