--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2125,12 +2125,55 @@ body::-webkit-scrollbar-thumb {
             justify-content: center;
   }
 }
-.the-content-wrap .container .the-profile__sidebar a {
-  -webkit-box-pack: start;
-      -ms-flex-pack: start;
-          justify-content: flex-start;
+@media (max-width: 768px) {
+  .content-table-wrap {
+    overflow: auto;
+  }
+  .content-table-wrap .purch__item {
+    width: -webkit-max-content;
+    width: -moz-max-content;
+    width: max-content;
+  }
+  .the-content__head {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: start;
+        -ms-flex-align: start;
+            align-items: flex-start;
+  }
+  .the-content__head .text {
+    margin-bottom: 20px;
+  }
 }
-
+@media (max-width: 560px) {
+  .the-content-wrap .container .the-profile__sidebar .the-profile__wrap {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+  .the-content-wrap .container .the-profile__sidebar .the-profile__wrap a {
+    -webkit-box-pack: start;
+        -ms-flex-pack: start;
+            justify-content: flex-start;
+  }
+  .the-content__head .text h2 {
+    font-size: 18px;
+    font-weight: 400;
+  }
+  .the-content__head .actions {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+  .the-content__head .actions button, .the-content__head .actions a {
+    -webkit-box-sizing: border-box;
+            box-sizing: border-box;
+  }
+}
 .rp-top {
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
